--- a/resources/css/utilities.css
+++ b/resources/css/utilities.css
@@ -41,3 +41,7 @@
     mask-composite: exclude;
   }
 }
+
+@utility no-scrollbar {
+  @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
+}
