--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
+/* prettier-ignore */
 @source inline("{col-span-{3,4,6,8,9}}");
+/* prettier-ignore */
 @source inline("{flex-{col,row}-reverse}");
 
 @layer base {
@@ -22,4 +24,3 @@
 @theme {
   --font-sans: "Inter", sans-serif;
 }
-
